# swig-matlab-regression

./: CMakeLists.txt  refToInternalObject.cpp  refToInternalObject.h  refToInternalObject.i  runme.m
cmake/: FindMatlab.cmake
